Added mapper 2 (UNROM). Mapper 1 (MMC1) is broken.

--- a/web/dartnes.html
+++ b/web/dartnes.html
@@ -13,10 +13,9 @@
       <div class="nes-roms">
         <select id="romSelect">
           <option>Select a ROM...</option>
-          <optgroup>Local</optgroup>
           <option value="local-roms/super_mario_bros.nes">Super Mario Bros.</option>
-          <optgroup>Working</optgroup>
-          <option value="local-roms/Contra (U) [!].nes">Contra</option>
+          <option value="local-roms/contra.nes">Contra</option>
+          <option value="local-roms/mega_man_2.nes">Mega Man 2</option>
         </select>
       </div>
       <div class="nes-controls">
