Updated the cpu opdata to be simpler, and use less bit shifting.

--- a/web/dartnes.html
+++ b/web/dartnes.html
@@ -16,8 +16,8 @@
       <div class="nes-roms">
         <select id="romSelect">
           <option>Select a ROM...</option>
-          <option value="local-roms/super_mario_bros.nes">Super Mario Bros.</option>
-          <option value="local-roms/contra.nes">Contra</option>
+          <option value="local-roms/Super Mario Bros. (JU) (PRG0) [!].nes">Super Mario Bros.</option>
+          <option value="local-roms/Contra (U) [!].nes">Contra</option>
           <!--<option value="local-roms/mega_man_2.nes">Mega Man 2</option>-->
         </select>
       </div>
