Updated the UI to tell the user if they are running in Dart or JavaScript.

--- a/web/dartnes.html
+++ b/web/dartnes.html
@@ -10,7 +10,7 @@
     <span style="font-size: 130%">DartNES</span>
     is a <a href="http://dartlang.org">Dart</a> port of <a href="http://workhorsy.org/jsnes">JSNES</a>
     </h1>
-    
+
   <div id="emulator">
       <canvas id="screen" class="nes-screen" width="256" height="240"></canvas>
       <div class="nes-roms">
@@ -28,6 +28,7 @@
         <input type="button" id="zoom" value="zoom in" class="nes-zoom" disabled="disabled">
       </div>
       <p id="status" class="nes-status">Booting up...</p>
+      <p id="vm">Waiting for info on VM.</p>
     </div>
     
     <h2>Controls</h2>
