--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,9 @@
       <div class="nes-roms">
         <select id="romSelect">
           <option>Select a ROM...</option>
+          <option value="local-roms/BionicCommando.nes">Bionic Commando</option>
           <option value="local-roms/Contra.nes">Contra</option>
-          <!--<option value="local-roms/Megaman2.nes">Mega Man 2</option>-->
+          <option value="local-roms/Megaman2.nes">Mega Man 2</option>
           <option value="local-roms/NinjaGaiden.nes">Ninja Gaiden</option>
           <option value="local-roms/SuperMarioBros.nes">Super Mario Bros.</option>
         </select>
