Updated to work with newest version of Dart.

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>DartNES: A Dart NES emulator</title>
     <link type="text/css" href="dartnes.css" media="screen" rel="Stylesheet" />
+    <script async src="source/main.dart" type="application/dart"></script>
+    <script async src="packages/browser/dart.js"></script>
 </head>
 
 <body>
@@ -83,10 +85,5 @@
     <p>
     Original JSNES source code <a href="https://github.com/bfirsh/jsnes">https://github.com/bfirsh/jsnes</a>
     </p>
-    
-    <script type="application/dart" src="source/main.dart"></script>
-    
-    <script src="packages/browser/dart.js"></script>
-
 </body>
 </html>
